--- a/assets/data/AppSetting.json
+++ b/assets/data/AppSetting.json
@@ -1,5 +1,17 @@
 {
     "Name": "To-dos",
     "App": "",
-    "BeginDate": "2022-08-01"
+    "BeginDate": "2022-08-01",
+    "Days": {
+        "2022-08-01": {
+            "Valut": {
+                "title": 123
+            }
+        },
+        "2022-08-02": {
+            "Valut": {
+                "title": 123
+            }
+        }
+    }
 }
